--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,5 @@ spring.data.jpa.repositories.enabled = true
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.Oracle
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
