--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,20 @@ spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 #spring.jpa.show-sql=true
 #spring.jpa.hibernate.ddl-auto=create
+
+#spring boot config
+spring.main.banner-mode=off
+#tomcat config
+reference.id.size=8
+spring.profiles.active=dev
+server.tomcat.max-threads=123
+surena.mq.host=10.40.0.240
+surena.mq.port=3000
+surena.mq.queue-manager=CENTRAL
+surena.mq.channel=SYSTEM.DEF.SVRCONN
+surena.mq.userName=mqm
+surena.mq.password=surenamqm
+surena.receiver.queue=receiver
+surena.sender.queue=sender
+#spring.datasou
+spring.profiles.include=prod 
