--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
                 <version>1.18.12</version>
                 <scope>provided</scope>
             </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13</version>
+        </dependency>
     </dependencies>
 
     <build>
